--- a/personal.css
+++ b/personal.css
@@ -11,72 +11,87 @@
 	width: 100%;
 }
 
+#background img {
+	height: 100%;
+	width: 100%;
+	z-index: 0;	
+}
+
 #header {
 	text-align:center;
-	font-size:36px;
+	font-size:2.8em;
 	font-weight: bold;
 	font-family:"Century Gothic";
-	color: #07587e;
+	color: white;
 	position:absolute;
-	top: 2%;
-	left: 2%;
-	width: 94%;
-	z-index:2;
-	background-color:#fbfba2;
-	border: 4px solid #abdff7;
-	border-radius:8px;
-	padding: 5px 10px 5px 5px;
-	opacity:0.9;
-  	filter:alpha(opacity=90); /* For IE8 and earlier */
+	top:0%;
+	left: 0%;
+	width: 98%;
+	z-index:20;
+	background-color:#333333;
+	padding: 1% 1% 1.5% 1%;
+	opacity:0.7;
+  	filter:alpha(opacity=70); /* For IE8 and earlier */
+}
+
+#linkedin {
+	position: absolute;
+	top: 1%;
+	right: 1%;
+	z-index: 21;	
+}
+
+#linkedin img {
+	height: 2.7em;
+	width: 2.7em;
+	z-index:22;
 }
 
 .center {
-	position: absolute;
-	font-size: 20px;
+	position: relative;
 	font-weight: bold;
-	color: #009922;
-	/*font-family: "MS Serif", "New York", serif*/
-	width:70%;
-	height:88%;
-	top: 10%;
-	left: 15%;
-	z-index: 1;
-	margin-top: 1px;
-	background-color:#fbfba2;
-	border: 4px solid #abdff7;
-	padding: 2px 1px 5px 12px;
-	border-radius:8px;
-	opacity:0.8;
-  	filter:alpha(opacity=80); /* For IE8 and earlier */
+	color: #ffffff;
+	font-family:"Lucida Sans Unicode", "Lucida Grande", sans-serif;
+	width:80%;
+	height:95%;
+	z-index: 10;
+	margin-top: 10%;
+	margin-left: 10%;
+	background-color:#333333;
+	padding: 0.5% 0% 6% 2%;
+	opacity:0.85;
+  	filter:alpha(opacity=85); /* For IE8 and earlier */
+}
+
+center h1 {
+	padding:0% 1% 1% 1%;
+	position: relative;	
 }
 
 .center p {
-	font-size:18px;
-	color: #005511;
-	padding: 5px 0px 5px 7px;
+	position:relative;
+	font-size:1em;
+	color: #ffffff;
+	padding: 10px 3px 0px 10px;
 	margin-right: 0px;
 	margin-top: 0px;
-	border: 2px solid #abdff7;
-	border-radius: 2px;
 	float:left;
 	display:inline-block;
 	width: 70%;
 }
 
-/*.center a {
-	display:inline-block;
-	padding: 7px 7px 7px 7px;
-	margin-left:auto;
-	margin-right:auto;
-	width: 8em;
-	height: 8em;
-}*/
-
 .center img { 
+	position:relative;
 	margin-left:auto;
 	margin-right:auto;
 	display:inline-block;
-	padding: 7px 7px 7px 7px;
+	padding: 0% 0% 0% 0%;
 	width: 26%;
 	height: 8em;
+}
+
+#monogram {
+	position:fixed;
+	right:0.5%;
+	bottom:0%;	
 }
