--- a/style.css
+++ b/style.css
@@ -1,20 +1,9 @@
 @charset "utf-8";
 /* CSS Document */
 
-#background {
-	position: fixed;
-	z-index: 0;
-	height: 100%;
-	width: 100%;
-	background-color:#fbfba2;
-	height: 100%;
-	width: 100%;
-}
-
-#background img {
-	height: 100%;
-	width: 100%;
-	z-index: 0;	
+body {
+	background-image:url('http://i.imgur.com/67xTl46.jpg');
+	background-attachment: fixed;
 }
 
 #header {
@@ -62,17 +51,17 @@
 }
 
 .center {
-	position: relative;
+	position:relative;
 	font-weight: bold;
 	color: #ffffff;
 	font-family:"Lucida Sans Unicode", "Lucida Grande", sans-serif;
-	width:75%;
-	height:95%;
+	width:77%;
+	height:100%;
 	z-index: 10;
-	margin-top: 10%;
-	margin-left: 12.5%;
+	margin-top: 7em;
+	margin-left: 11.5%;
 	background-color:#333333;
-	padding: 0.5% 0% 8% 2%;
+	padding: 3px 2% 5% 2%;
 	opacity:0.85;
   	filter:alpha(opacity=85); /* For IE8 and earlier */
 }
@@ -90,25 +79,22 @@
 	box-shadow:4px 4px 4px #ffffff;	
 }
 
-/*.center h1 {
-	padding:2% 1% 1% 1%;
-	position: relative;	
-}*/
-
 .project h1 {
 	font-family:"Century Gothic";
+	position:relative;
+	margin-top: 2%;
+	margin-bottom: 10px;
 }
 
 .center p {
 	position:relative;
 	font-size:1em;
 	color: #ffffff;
-	padding: 5px 3px 0px 10px;
+	padding: 0% 2% 0% 2%;
 	margin-right: 0px;
 	margin-top: 0px;
-	float:left;
 	display:inline-block;
-	width: 70%;
+	width: 69%;
 	font-family:"Century Gothic";
 }
 
@@ -117,7 +103,8 @@
 	margin-left:auto;
 	margin-right:auto;
 	display:inline-block;
-	padding: 0% 0% 0% 1%;
+	float:right;
+	padding: 0% 0% 0% 0%;
 	width: 26%;
 	height: 8em;
 }
