--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 body {
 	background-image:url('http://i.imgur.com/67xTl46.jpg');
 	background-attachment: fixed;
+	background-size:cover;
 }
 
 #header {
@@ -84,11 +85,12 @@ body {
 	position:relative;
 	margin-top: 2%;
 	margin-bottom: 10px;
+	font-size:2.8em;
 }
 
 .center p {
 	position:relative;
-	font-size:1em;
+	font-size:1.5em;
 	color: #ffffff;
 	padding: 0% 2% 0% 2%;
 	margin-right: 0px;
